--- a/package.json
+++ b/package.json
@@ -2,9 +2,10 @@
   "name": "the-man-bot",
   "author": "dev147",
   "license": "GPLv2",
-  "version": "1.0.0",
+  "version": "1.1.0",
   "main": "./build/index.js",
   "scripts": {
+    "preversion": "git add -A",
     "build": "rm -rf ./build && tsc",
     "predeploy": "npm run build",
     "deploy": "node ./build/deploy.js",
